# axiomedge

./: .env.example  .gitignore  .importlinter  .legalize-kr-dedup-skipped.txt  .sops.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  bitbucket-pipelines.yml  distill.yaml  docker-compose.yml  edge_benchmark_results.json  gguf_benchmark_results.json  pilot_benchmark_results.json  pyproject.toml  sonar-project.properties  upsert_from_s3.py
.githooks/: pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: backup-drill.yml  ci.yml  deploy.yml  quality-gate.yml  tech-debt-audit.yml
.scannerwork/: report-task.txt
apps/web/: DESIGN.md  package.json  playwright.config.ts  vitest.config.ts
cli/: crawl.py  ingest.py  search.py  worker.py
config/neo4j/: neo4j.conf
dashboard/: app.py
dashboard/components/: constants.py  graph_labels.py  graph_viz.py  graph_viz_v2.py  logout_utils.py  metric_cards.py  session_guard.py  sidebar.py
dashboard/pages/: auth_management.py  chat.py  config_weights.py  conflicts.py  dashboard.py  data_sources.py  doc_lifecycle.py  edge_models.py  error_report.py  evaluation.py  feedback_admin.py  find_owner.py  gaps.py  glossary.py  glossary_components.py  golden_set.py  graph.py  graph_explorer.py  graph_integrity.py  impact.py  ingestion_gate.py  ingestion_jobs.py  job_monitor.py  my_activities.py  my_documents.py  my_feedback.py  operations.py  owners.py  pipeline_health.py  quality.py  rag_quality.py  search_analytics.py  search_groups.py  search_history.py  traceability.py  verification.py  whitelist.py
dashboard/services/: api_client.py  auth.py  config.py  feature_flags.py  health.py  logging_config.py  metrics.py  neo4j_service.py  session_store.py  validators.py
deploy/: distill.yaml  docker-compose.yml
deploy/k8s/: kustomization.yaml  llm-config.yaml  namespace.yaml
deploy/prometheus/: rules.yaml
docker/paddleocr/: Dockerfile  build_paddle.Dockerfile  download_models.py  server.py
docs/: AGENTIC_RAG.md  API.md  API_VERSIONING.md  ARCHITECTURE.md  CONFIGURATION.md  CONFLUENCE_CRAWLER.md  DATA_MODEL.md  DEPLOYMENT.md  DEVELOPMENT.md  DISTILL.md  DISTILL_TOOLCHAIN.md  GLOSSARY.md  GRAPHRAG.md  GRAPH_SCHEMA_EVOLUTION.md  IMPROVEMENT_PLAN.md  INGESTION_PIPELINE.md  JOBS.md  MIGRATION_GUIDE.md  OPS.md  PERFORMANCE.md  QUALITY_ROADMAP.md  QUICKSTART.md  RAG_PIPELINE.md  RBAC.md  SECRETS.md  SECURITY.md  TECH_DEBT.md  TESTING.md  TROUBLESHOOTING.md  WEB.md  WEIGHT_TUNING.md  edge_model_benchmark_report.md
docs/adr/: 0001-agentic-rag.md
edge/: Dockerfile  docker-compose.yml  install.ps1  install.sh  provision.sh  server.py  sync.py  update-edge.ps1  update-edge.sh
eval/: baseline.json
helm/knowledge-local/: values.yaml
k8s/: kustomization.yaml
k8s/api/: deployment.yaml  hpa.yaml
k8s/crawler/: deployment.yaml
k8s/dashboard/: deployment.yaml
k8s/distill/: Dockerfile.trainer  requirements-trainer.txt
k8s/neo4j/: deployment.yaml
k8s/ollama/: deployment.yaml
k8s/paddleocr/: deployment.yaml
k8s/postgres/: deployment.yaml
k8s/qdrant/: deployment.yaml
k8s/redis/: deployment.yaml
k8s/tei/: deployment.yaml  reranker-deployment.yaml
loadtest/: baseline.json  health.js  search.js
migrations/: PATTERNS.md  env.py
migrations/versions/: 0001_baseline.py  0002_organizations.py  0003_rbac_b0.py  0004_kb_org_required.py  0005_data_source_org_required.py  0006_data_source_secret.py  0007_data_source_owner_user.py  0008_distill_build_gpu_metadata.py  0009_bulk_upload_sessions.py  0010_ingestion_document_failures.py  0011_feature_flags.py  0012_audit_log_created_at_index.py  0013_failure_doc_id_widen.py  0014_distill_force_chunk.py  0014_distill_force_deploy_and_chunk_fp.py
scripts/: __init__.py  augment_questions.py  backfill_morphemes.py  backfill_org_id.py  backfill_owner_from_crawl.py  backfill_tree_index.py  baseline_test.py  batch_clean_chunks.py  build_edge_binary.py  confluence_full_crawler.py  coverage_gate.py  db_migration_check.py  distill_init_db.py  dump_openapi.py  edge_serving_benchmark.py  enrich_metadata.py  eval_agentic.py  eval_quality_gate.py  evaluate_tree_index.py  generate_golden_set.py  graph_cleanup.py  load_test.py  migrate_data_source_secrets.py  perf_check.py  profile_legal_ingest.py  quantize_bge_m3.py  reformat_training_data.py  refresh_tei_access.py  reingest_failed_legal.py  run_graphrag.py  run_graphrag_parallel.py  run_llm_enrichment.py  run_metadata_backfill.py  run_rag_evaluation.py  run_term_extraction.py  setup_distill_toolchain.sh  sg_fallback.py  train_on_gpu.py  train_remote.py
scripts/backfill/: backfill_morphemes.py  backfill_owner_from_crawl.py  enrich_metadata.py  run_llm_enrichment.py  upsert_from_s3.py
scripts/benchmark/: baseline_test.py  distill_pilot_benchmark.py  gguf_serving_benchmark.py
scripts/crawl/: confluence_crawler.py  confluence_full_crawler.py
scripts/distill/: augment_questions.py  distill_init_db.py  generate_golden_set.py  reformat_training_data.py  run_rag_evaluation.py  train_on_gpu.py
scripts/graphrag/: graph_cleanup.py  run_graphrag.py  run_graphrag_all.py  run_graphrag_parallel.py  run_term_extraction.py
scripts/ops/: aliases.sh  audit_todos.py  backup_db.sh  backup_drill.sh  backup_neo4j.sh  backup_qdrant.sh  coverage_gate.py  gpu_boot_train.sh  migrate_schema_to_yaml.py  new-worktree.sh  refresh_tei_access.py  run_dashboard_tests.sh  sg_fallback.py
scripts/patches/: convert_hf_to_gguf_exaone.patch
src/: config.py  config_weights.py  mcp_server.py
src/agentic/: __init__.py  agent.py  cost_guard.py  planner.py  protocols.py  routing.py
src/api/: app.py  errors.py  route_discovery.py  search_services_factory.py  state.py
src/apps/: __init__.py
src/auth/: __init__.py  abac.py  activity_logger.py  authenticator.py  dependencies.py  jwt_service.py  middleware.py  models.py  org_service.py  password.py  permission_matrix.py  providers.py  rbac.py  revoked_token_store.py  role_service.py  secret_box.py  secret_paths.py  service.py  token_store.py  (+1 more)
tests/: conftest.py
(+1272 files in other folders)
