[project]
name = "knowledge-local"
version = "0.1.0"
description = "Standalone Knowledge Management System - Local-first"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.27.0",
    # Dashboard
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    "pyvis>=0.3.2",
    "pandas>=2.2.0",
    # Vector DB
    "qdrant-client>=1.12.0,<1.14.0",
    # Graph DB
    "neo4j>=5.14.0",
    # Embedding (BGE-M3 ONNX)
    "onnxruntime>=1.17.0",
    "transformers>=4.48.0",
    "numpy>=1.26.0",
    # Korean NLP
    "kiwipiepy>=0.22.2",
    "kss>=4.0",
    # Database (PostgreSQL)
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14",
    # Config
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
    # Document parsing
    "python-pptx>=1.0.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "pymupdf>=1.24.0",
    # Similarity & Reranking
    "rapidfuzz>=3.6.0",
    "langdetect>=1.0.9",
    "sentence-transformers>=3.0.0,<5.0",
    # BGE-M3 native sparse vectors
    "FlagEmbedding>=1.2",
    "torch>=2.0.0",
    # Computer Vision (shape/arrow detection)
    "opencv-python-headless>=4.9.0",
    "Pillow>=12.1.1",
    # JSON repair for LLM output parsing
    "json-repair>=0.1",
    # Redis (search cache + dedup cache)
    "redis[hiredis]>=5.0",
    # Auth (JWT verification for Keycloak/AzureAD)
    "PyJWT[crypto]>=2.8.0",
    "bcrypt>=4.0.0",
    # MCP Server
    "mcp>=1.8.0",
    # Utilities
    "python-multipart>=0.0.9",
    "pdfplumber>=0.11.9",
    "boto3>=1.42.77",
    "streamlit-agraph>=0.0.45",
    "rich>=14.3.3",
    "trl>=1.0.0",
    "umap-learn>=0.5.12",
]

[project.optional-dependencies]
# PaddleOCR: Linux x86_64 only (Mac ARM64 not supported by paddlepaddle)
ocr = [
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "cli", "dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests requiring running API server",
    "e2e: end-to-end tests requiring running API server and all services",
    "forked: run test in forked subprocess (numpy/C extension isolation)",
]
# Coverage is opt-in via `make test-unit` or manual `--cov` flag. We do NOT
# enable it on every pytest call because individual test runs during
# development would otherwise pay the collection overhead and the
# `--cov-fail-under` gate would block WIP work. CI enforces the floor
# separately (see scripts/coverage_gate.py and the Makefile target).

[tool.coverage.run]
# Restrict measurement to first-party application code. Dashboard is
# excluded because it will be replaced by a separate SPA project, and
# scripts/cli are one-off entry points per docs/IMPROVEMENT_PLAN.md.
source = ["src"]
branch = false
omit = [
    "src/api/routes/__init__.py",
    "src/**/tests/*",
    "*/conftest.py",
]

[tool.coverage.report]
# Global floor 은 Makefile `test-unit` 과 CI 에서 `--cov-fail-under=75`
# 로 명시적으로 적용한다. pyproject 에 박아두면 부분 test run 마다 fail
# 하는 UX 가 나쁘므로 여기서는 강제하지 않음. 상세: docs/TESTING.md.
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",  # Protocol stubs
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
# Phase C 품질 규칙.
# BLE001 활성화 완료 — 기존 564건은 `# noqa: BLE001` pragma 부여.
# 신규 코드에서 bare `except Exception:` 작성 시 ruff 가 즉시 차단.
# pragma 를 점진적으로 제거하면서 적절한 예외 타입으로 교체하는 것이 목표.
#
# 점진적으로 추가 예정:
#   - S101: assert in production code
#   - ARG001: unused function argument
select = ["E", "F", "W", "BLE001"]

[tool.ruff.lint.per-file-ignores]
# Streamlit pages + entry: module-level st.set_page_config()/init_logging() 이 다른 import 앞에 와야 함
"src/apps/dashboard/pages/*.py" = ["E402", "E501"]
"src/apps/dashboard/app.py" = ["E402"]
"src/apps/dashboard/components/*.py" = ["E501"]
# Admin route facade modules: late re-export pattern (테스트 patch 대응)
"src/api/routes/_admin_*.py" = ["E402"]
# LLM prompt 파일: 자연어 프롬프트 문자열은 줄바꿈하면 가독성 떨어짐
"src/nlp/llm/prompts.py" = ["E501"]
"src/pipelines/graphrag/prompts.py" = ["E501"]
"src/search/tiered_response.py" = ["E501"]
"src/distill/data_gen/test_data_templates.py" = ["E501"]
# SQLAlchemy ORM 모델: 컬럼 정의 + 관계 선언 라인이 길어짐
"src/stores/postgres/models.py" = ["E501"]
"src/auth/models.py" = ["E501"]
# Utility scripts (backfill, crawl, ops): 일회성/배치 도구 — 엄격 lint 면제
"scripts/**/*.py" = ["BLE001", "E501", "E701", "E731", "E741", "E402"]

# ---------------------------------------------------------------------------
# Type checking (pyright)
# ---------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingReturnType = "warning"
reportUnknownMemberType = false
include = ["src"]
exclude = ["src/apps/dashboard", "scripts"]
# Optional/None flow analysis 가 stateful object/Redis guard 패턴에서 false positive 다수 →
# 점진적으로 error 로 승격 목표. 지금은 warning 으로 가시화.
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"
reportOptionalCall = "warning"
reportOptionalIterable = "warning"
# AppState 가 dict 인터페이스를 일부만 구현 — 점진적 migration 중
reportArgumentType = "warning"

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "pyright>=1.1.408",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
